labels fixed to proper names

--- a/notebooks/yolo_obj_tracking.ipynb
+++ b/notebooks/yolo_obj_tracking.ipynb
@@ -21,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wed Jun 11 18:58:41 2025       \n",
+      "Thu Jun 12 00:02:56 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 576.52                 Driver Version: 576.52         CUDA Version: 12.9     |\n",
       "|-----------------------------------------+------------------------+----------------------+\n",
@@ -30,7 +30,7 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA GeForce RTX 3070 Ti   WDDM  |   00000000:01:00.0  On |                  N/A |\n",
-      "| 30%   44C    P0             72W /  290W |     868MiB /   8192MiB |      0%      Default |\n",
+      "| 30%   44C    P0             72W /  290W |     593MiB /   8192MiB |      0%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "                                                                                         \n",
@@ -40,18 +40,17 @@
       "|        ID   ID                                                               Usage      |\n",
       "|=========================================================================================|\n",
       "|    0   N/A  N/A            4924    C+G   ...al\\Programs\\cursor\\Cursor.exe      N/A      |\n",
-      "|    0   N/A  N/A            7832    C+G   ...ntrolPanel\\SystemSettings.exe      N/A      |\n",
       "|    0   N/A  N/A            8392    C+G   C:\\Windows\\explorer.exe               N/A      |\n",
       "|    0   N/A  N/A            8780    C+G   ...5n1h2txyewy\\TextInputHost.exe      N/A      |\n",
       "|    0   N/A  N/A           10020    C+G   ...IA App\\CEF\\NVIDIA Overlay.exe      N/A      |\n",
       "|    0   N/A  N/A           11168    C+G   ...IA App\\CEF\\NVIDIA Overlay.exe      N/A      |\n",
       "|    0   N/A  N/A           11200    C+G   ..._cw5n1h2txyewy\\SearchHost.exe      N/A      |\n",
       "|    0   N/A  N/A           11248    C+G   ...y\\StartMenuExperienceHost.exe      N/A      |\n",
-      "|    0   N/A  N/A           11872    C+G   ...SnippingTool\\SnippingTool.exe      N/A      |\n",
       "|    0   N/A  N/A           13164    C+G   ...xyewy\\ShellExperienceHost.exe      N/A      |\n",
       "|    0   N/A  N/A           13276    C+G   ....0.3296.68\\msedgewebview2.exe      N/A      |\n",
       "|    0   N/A  N/A           14388    C+G   ...64__zpdnekdrzrea0\\Spotify.exe      N/A      |\n",
       "|    0   N/A  N/A           17812    C+G   ...lpaper_engine\\wallpaper64.exe      N/A      |\n",
+      "|    0   N/A  N/A           21088    C+G   ...App_cw5n1h2txyewy\\LockApp.exe      N/A      |\n",
       "+-----------------------------------------------------------------------------------------+\n"
      ]
     }
@@ -91,7 +90,7 @@
      "output_type": "stream",
      "text": [
       "Ultralytics 8.3.153  Python-3.12.11 torch-2.5.1+cu121 CUDA:0 (NVIDIA GeForce RTX 3070 Ti, 8192MiB)\n",
-      "Setup complete  (12 CPUs, 15.9 GB RAM, 1447.5/1907.0 GB disk)\n"
+      "Setup complete  (12 CPUs, 15.9 GB RAM, 1447.8/1907.0 GB disk)\n"
      ]
     }
    ],
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1bf78fd7-d341-43d2-91e6-0fea34232a8c",
    "metadata": {},
    "outputs": [
@@ -191,7 +190,7 @@
       "Freezing layer 'model.23.dfl.conv.weight'\n",
       "\u001b[34m\u001b[1mAMP: \u001b[0mrunning Automatic Mixed Precision (AMP) checks...\n",
       "\u001b[34m\u001b[1mAMP: \u001b[0mchecks passed \n",
-      "\u001b[34m\u001b[1mtrain: \u001b[0mFast image access  (ping: 0.10.0 ms, read: 1137.6166.0 MB/s, size: 233.8 KB)\n"
+      "\u001b[34m\u001b[1mtrain: \u001b[0mFast image access  (ping: 0.10.0 ms, read: 853.3450.8 MB/s, size: 233.8 KB)\n"
      ]
     },
     {
@@ -219,7 +218,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34m\u001b[1mval: \u001b[0mFast image access  (ping: 0.10.0 ms, read: 994.8238.5 MB/s, size: 239.6 KB)\n"
+      "\u001b[34m\u001b[1mval: \u001b[0mFast image access  (ping: 0.10.0 ms, read: 1007.3386.6 MB/s, size: 239.6 KB)\n"
      ]
     },
     {
@@ -577,11 +576,11 @@
      "output_type": "stream",
      "text": [
       "                   all        198       2216      0.831      0.792      0.827      0.521\n",
-      "- collaborate with your team on computer vision projects        185        446      0.912      0.971      0.973      0.659\n",
-      "------------------------------         93         96       0.75      0.906       0.91      0.605\n",
-      "Basket recognition - v6 2023-06-05 1-01pm        100        102      0.845      0.321       0.46      0.199\n",
-      "Roboflow is an end-to-end computer vision platform that helps you        197       1572      0.817      0.971      0.966      0.623\n",
-      "Speed: 0.1ms preprocess, 0.9ms inference, 0.0ms loss, 1.6ms postprocess per image\n",
+      "               referee        185        446      0.912      0.971      0.973      0.659\n",
+      "                basket         93         96       0.75      0.906       0.91      0.605\n",
+      "                  ball        100        102      0.845      0.321       0.46      0.199\n",
+      "                player        197       1572      0.817      0.971      0.966      0.623\n",
+      "Speed: 0.1ms preprocess, 1.0ms inference, 0.0ms loss, 2.9ms postprocess per image\n",
       "Results saved to \u001b[1mruns\\detect\\train\u001b[0m\n"
      ]
     }
